Fix several designs on mobile.

--- a/src/app.css
+++ b/src/app.css
@@ -5,23 +5,18 @@
 
 @layer base {
   h1 {
-    @apply text-5xl;
-    @apply font-extrabold;
+    @apply text-3xl sm:text-5xl font-extrabold;
   }
   h2 {
-    @apply text-4xl;
-    @apply font-bold;
+    @apply text-2xl sm:text-4xl font-bold ;
   }
   h3 {
-    @apply text-3xl;
-    @apply font-bold;
+    @apply text-xl sm:text-3xl font-bold ;
   }
   h4 {
-    @apply text-2xl;
-    @apply font-bold;
+    @apply text-xl sm:text-2xl font-bold ;
   }
   h5 {
-    @apply text-xl;
-    @apply font-bold;
+    @apply text-xl font-bold;
   }
 }
